--- a/index.html
+++ b/index.html
@@ -113,7 +113,142 @@
 				</div>																
 			</div>
 		</div>
-		<div class="content"></div>
+		<div class="content">
+			<div class="content-top">
+				<img class="content-top__image" src="src/images/channel-bg.png">
+			</div>
+			<div class="content__header content-header">
+				<div class="content-header__info content-info">
+					<div class="content-info__userpic info-userpic">
+						<img class="info-userpic__image" src="">
+					</div>
+					<div class="content-info__description info-description">
+						<h6 class="info-description__title"></h6>
+						<p class="info-description__text"></p>
+					</div>
+				</div>
+				<div class="content-header__subscribe content-subscribe">
+					<div class="content-subscribe__icon"></div>
+					<div class="content-subscribe__button"></div>
+				</div>
+			</div>
+			<div class="content-main">
+				<div class="content-main__wrapper content-wrapper">
+					<ul class="content-navigation">
+						<li class="content-navigation__item nav-item nav-item_active"><a class="nav-item__link" href="">Home</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Videos</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Playlists</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Channels</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Discussion</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">About</a></li>
+						<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/search.png"></a></li>
+					</ul>
+					<div class="content-player player">
+						<div class="content-player__image player-image">
+							<img class="player-image__pic" src="">
+							<span class="player-image__time"></span>
+						</div>
+						<div class="content-player__description player-description">
+							<h6 class="player-description__title player-title">Lorem ipsum</h6>
+							<p class="player-description__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+							<p class="player-description__info">11k views 6 month ago</p>
+						</div>
+					</div>					
+				</div>
+				<div class="content-main__recommended recommended">
+					<h6 class="recommended__title">Recommended channels</h6>
+					<div class="recommended__item recommended-item">
+						<img class="recommended-item__image" src="src/images/recommended/medium-1.png">
+						<p class="recommended-item__name">Flora Benson</p>
+					</div>
+					<div class="recommended__item recommended-item">
+						<img class="recommended-item__image" src="src/images/recommended/medium-2.png">
+						<p class="recommended-item__name">Violet Cobb</p>
+					</div>
+					<div class="recommended__item recommended-item">
+						<img class="recommended-item__image" src="src/images/recommended/medium-3.png">
+						<p class="recommended-item__name">Philip Mulins</p>
+					</div>										
+				</div>
+			</div>
+			<div class="content-videos">
+				<h4 class="content-videos__title">Margaret Phelps videos</h4>
+				<div class="content-videos__wrapper">
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-1.png">
+							<span class="videos-image__text">7:36</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Astronomy Or Astrology</h6>
+							<p class="videos-description__text">240k views 4 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-2.png">
+							<span class="videos-image__text">2:19</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Advertising outdoors</h6>
+							<p class="videos-description__text">13k views 15 days ago Food & Drink</p>
+						</div>
+					</div>				
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-2.png">
+							<span class="videos-image__text">9:05</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Radio Astronomy</h6>
+							<p class="videos-description__text">1k views 11 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-3.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">A Good Autoresponder</h6>
+							<p class="videos-description__text">45k views 2 months ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-4.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">Baby Monitor Technology</h6>
+							<p class="videos-description__text">86k views 7 days ago Food & Drink</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-5.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">lorem ipsum</h6>
+							<p class="videos-description__text">aoijgiouahigu</p>
+						</div>
+					</div>
+					<div class="content-videos__item videos-item">
+						<div class="videos-item__image videos-image">
+							<img class="videos-image__pic" src="src/images/channel/channel-6.png">
+							<span class="videos-image__text">7:32</span>
+						</div>
+						<div class="videos-item__description videos-description">
+							<h6 class="videos-description__title">lorem ipsum</h6>
+							<p class="videos-description__text">aoijgiouahigu</p>
+						</div>
+					</div>						
+				</div>																			
+			</div>
+		</div>
+
 	</section>
 	<footer></footer>
 	<script src="build/js/script.js"></script>
