Completed desktop version of channel page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Avtobus1</title>
+	<title>Template</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">	
@@ -41,47 +41,47 @@
 	<section class="main">
 		<div class="sidebar">
 			<div class="sidebar__categories categories">
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+				<div class="categories__item categories-item categories-item_active">
+					<img class="categories-item__image" src="src/images/home.png">
 					<p class="categories-item__text">Home</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/trending.png">
 					<p class="categories-item__text">Trending</p>
 				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+				<div class="categories__item categories-item categories-item_spaced">
+					<img class="categories-item__image" src="src/images/subscriptions.png">
 					<p class="categories-item__text">Subscriptions</p>
 				</div>				
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/library.png">
 					<p class="categories-item__text">Library</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/history.png">
 					<p class="categories-item__text">History</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/watchlater.png">
 					<p class="categories-item__text">Watch later</p>
 				</div>				
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/favourite.png">
 					<p class="categories-item__text">Favourites</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/liked.png">
 					<p class="categories-item__text">Liked videos</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/music.png">
 					<p class="categories-item__text">Music</p>
 				</div>
 				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/camera.png">
+					<img class="categories-item__image" src="src/images/games.png">
 					<p class="categories-item__text">Games</p>
 				</div>
-				<div class="categories__item categories-item">
+				<div class="categories__item categories-item categories-item_spaced">
 					<img class="categories-item__image" src="src/images/chevron-down.png">
 					<p class="categories-item__text">Show more</p>
 				</div>																		
@@ -89,28 +89,32 @@
 			<div class="sidebar__subscriptions subscriptions">
 				<div class="subscriptions__item subscriptions-item">
 					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<p class="subscriptions-item__text">Gussie Singleton</p>
 				</div>
 				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<img class="subscriptions-item__image" src="src/images/small-2.png">
+					<p class="subscriptions-item__text">Nora Francis</p>
 				</div>
 				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<img class="subscriptions-item__image" src="src/images/small-3.png">
+					<p class="subscriptions-item__text">Belle Briggs</p>
 				</div>
 				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<img class="subscriptions-item__image" src="src/images/small-4.png">
+					<p class="subscriptions-item__text">Eunice Cortez</p>
 				</div>
 				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<img class="subscriptions-item__image" src="src/images/small-5.png">
+					<p class="subscriptions-item__text">Emma Hanson</p>
 				</div>
 				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Lorem ipsum</p>
+					<img class="subscriptions-item__image" src="src/images/small-6.png">
+					<p class="subscriptions-item__text">Leah Berry</p>
 				</div>																
+			</div>
+			<div class="sidebar__settings sidebar-settings">
+				<img class="sidebar-settings__image" src="src/images/settings.png">
+				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
 		<div class="content">
@@ -120,16 +124,16 @@
 			<div class="content__header content-header">
 				<div class="content-header__info content-info">
 					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="">
+						<img class="info-userpic__image" src="src/images/profile.png">
 					</div>
 					<div class="content-info__description info-description">
-						<h6 class="info-description__title"></h6>
-						<p class="info-description__text"></p>
+						<h6 class="info-description__title">Margaret Phelps</h6>
+						<p class="info-description__text">245K subscribed</p>
 					</div>
 				</div>
 				<div class="content-header__subscribe content-subscribe">
-					<div class="content-subscribe__icon"></div>
-					<div class="content-subscribe__button"></div>
+					<img class="content-subscribe__icon" src="src/images/bell.png">
+					<a class="content-subscribe__button">Subscribe 2.3m</a>
 				</div>
 			</div>
 			<div class="content-main">
@@ -145,14 +149,13 @@
 					</ul>
 					<div class="content-player player">
 						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="">
+							<img class="player-image__pic" src="src/images/channel-video.png">
 							<span class="player-image__time"></span>
 						</div>
 						<div class="content-player__description player-description">
-							<h6 class="player-description__title player-title">Lorem ipsum</h6>
-							<p class="player-description__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
-							<p class="player-description__info">11k views 6 month ago</p>
+							<h6 class="player-description__title player-title">Choosing The Best Audio Player Software For Your Computer</h6>
+							<p class="player-description__text player-text">Your cheap internet-based banner advertising will become one of the sought for ads there are. Today, the world of Internet advertising is rapidly evolving beyond banner ads and intrusive pop-ups. Bayles A common medium for advertising on the Internet is the use of banner ads.</p>
+							<p class="player-description__info player-info">11k views 6 month ago</p>
 						</div>
 					</div>					
 				</div>
