--- a/index.html
+++ b/index.html
@@ -34,224 +34,64 @@
 				<img src="src/images/bell.png">
 			</div>
 		</div>
-		<div class="avatar">
+		<div class="top-userpic">
 			<img src="src/images/Userpic.png">
 		</div>
 	</header>
-	<section class="main">
-		<div class="sidebar">
-			<div class="sidebar__categories categories">
-				<div class="categories__item categories-item categories-item_active">
-					<img class="categories-item__image" src="src/images/home.png">
-					<p class="categories-item__text">Home</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/trending.png">
-					<p class="categories-item__text">Trending</p>
-				</div>
-				<div class="categories__item categories-item categories-item_spaced">
-					<img class="categories-item__image" src="src/images/subscriptions.png">
-					<p class="categories-item__text">Subscriptions</p>
-				</div>				
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/library.png">
-					<p class="categories-item__text">Library</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/history.png">
-					<p class="categories-item__text">History</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/watchlater.png">
-					<p class="categories-item__text">Watch later</p>
-				</div>				
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/favourite.png">
-					<p class="categories-item__text">Favourites</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/liked.png">
-					<p class="categories-item__text">Liked videos</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/music.png">
-					<p class="categories-item__text">Music</p>
-				</div>
-				<div class="categories__item categories-item">
-					<img class="categories-item__image" src="src/images/games.png">
-					<p class="categories-item__text">Games</p>
-				</div>
-				<div class="categories__item categories-item categories-item_spaced">
-					<img class="categories-item__image" src="src/images/chevron-down.png">
-					<p class="categories-item__text">Show more</p>
-				</div>																		
-			</div>
-			<div class="sidebar__subscriptions subscriptions">
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-1.png">
-					<p class="subscriptions-item__text">Gussie Singleton</p>
-				</div>
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-2.png">
-					<p class="subscriptions-item__text">Nora Francis</p>
-				</div>
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-3.png">
-					<p class="subscriptions-item__text">Belle Briggs</p>
-				</div>
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-4.png">
-					<p class="subscriptions-item__text">Eunice Cortez</p>
-				</div>
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-5.png">
-					<p class="subscriptions-item__text">Emma Hanson</p>
-				</div>
-				<div class="subscriptions__item subscriptions-item">
-					<img class="subscriptions-item__image" src="src/images/small-6.png">
-					<p class="subscriptions-item__text">Leah Berry</p>
-				</div>																
-			</div>
-			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="src/images/settings.png">
-				<p class="sidebar-settings__text">Settings</p>				
+	<section class="videoplayer">
+		<div class="videoplayer__main videoplayer-main">
+			<div class="videoplayer-main__image videoplayer-img">
+				<img class="videoplayer-img_item" src="src/images/player.png">
 			</div>
 		</div>
-		<div class="content">
-			<div class="content-top">
-				<img class="content-top__image" src="src/images/channel-bg.png">
-			</div>
-			<div class="content__header content-header">
-				<div class="content-header__info content-info">
-					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="src/images/profile.png">
-					</div>
-					<div class="content-info__description info-description">
-						<h6 class="info-description__title">Margaret Phelps</h6>
-						<p class="info-description__text">245K subscribed</p>
-					</div>
-				</div>
-				<div class="content-header__subscribe content-subscribe">
-					<img class="content-subscribe__icon" src="src/images/bell.png">
-					<a class="content-subscribe__button">Subscribe 2.3m</a>
+		<div class="videoplayer__playlist videoplayer-playlist">
+			<div class="videoplayer-playlist__header playlist-header">
+				<h3 class="playlist-header__title">Next</h3>
+				<div class="toggle">
+					<span class="switch-text">Autoplay</span>
+					<label class="switch">
+					  <input type="checkbox">
+					  <span class="slider round"></span>
+					</label>					
 				</div>
 			</div>
-			<div class="content-main">
-				<div class="content-main__wrapper content-wrapper">
-					<ul class="content-navigation">
-						<li class="content-navigation__item nav-item nav-item_active"><a class="nav-item__link" href="">Home</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Videos</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Playlists</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Channels</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Discussion</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">About</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/search.png"></a></li>
-					</ul>
-					<div class="content-player player">
-						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="src/images/channel-video.png">
-							<span class="player-image__time"></span>
-						</div>
-						<div class="content-player__description player-description">
-							<h6 class="player-description__title player-title">Choosing The Best Audio Player Software For Your Computer</h6>
-							<p class="player-description__text player-text">Your cheap internet-based banner advertising will become one of the sought for ads there are. Today, the world of Internet advertising is rapidly evolving beyond banner ads and intrusive pop-ups. Bayles A common medium for advertising on the Internet is the use of banner ads.</p>
-							<p class="player-description__info player-info">11k views 6 month ago</p>
-						</div>
-					</div>					
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="src/images/video/playlist-1.png">
 				</div>
-				<div class="content-main__recommended recommended">
-					<h6 class="recommended__title">Recommended channels</h6>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-1.png">
-						<p class="recommended-item__name">Flora Benson</p>
-					</div>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-2.png">
-						<p class="recommended-item__name">Violet Cobb</p>
-					</div>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-3.png">
-						<p class="recommended-item__name">Philip Mulins</p>
-					</div>										
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
 				</div>
 			</div>
-			<div class="content-videos">
-				<h4 class="content-videos__title">Margaret Phelps videos</h4>
-				<div class="content-videos__wrapper">
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-1.png">
-							<span class="videos-image__text">7:36</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">Astronomy Or Astrology</h6>
-							<p class="videos-description__text">240k views 4 months ago Food & Drink</p>
-						</div>
-					</div>
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-2.png">
-							<span class="videos-image__text">2:19</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">Advertising outdoors</h6>
-							<p class="videos-description__text">13k views 15 days ago Food & Drink</p>
-						</div>
-					</div>				
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-2.png">
-							<span class="videos-image__text">9:05</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">Radio Astronomy</h6>
-							<p class="videos-description__text">1k views 11 months ago Food & Drink</p>
-						</div>
-					</div>
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-3.png">
-							<span class="videos-image__text">7:32</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">A Good Autoresponder</h6>
-							<p class="videos-description__text">45k views 2 months ago Food & Drink</p>
-						</div>
-					</div>
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-4.png">
-							<span class="videos-image__text">7:32</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">Baby Monitor Technology</h6>
-							<p class="videos-description__text">86k views 7 days ago Food & Drink</p>
-						</div>
-					</div>
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-5.png">
-							<span class="videos-image__text">7:32</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">lorem ipsum</h6>
-							<p class="videos-description__text">aoijgiouahigu</p>
-						</div>
-					</div>
-					<div class="content-videos__item videos-item">
-						<div class="videos-item__image videos-image">
-							<img class="videos-image__pic" src="src/images/channel/channel-6.png">
-							<span class="videos-image__text">7:32</span>
-						</div>
-						<div class="videos-item__description videos-description">
-							<h6 class="videos-description__title">lorem ipsum</h6>
-							<p class="videos-description__text">aoijgiouahigu</p>
-						</div>
-					</div>						
-				</div>																			
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="src/images/video/playlist-2.png">
+				</div>
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">A Good Autoresponder</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
+				</div>
 			</div>
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="src/images/video/playlist-3.png">
+				</div>
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">Selecting The Right Hotel</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
+				</div>
+			</div>
+			<div class="videoplayer-playlist__item playlist-item">
+				<div class="playlist-item__image playlist-image">
+					<img class="playlist-image__item" src="src/images/video/playlist-4.png">
+				</div>
+				<div class="playlist-item__description">
+					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
+					<p class="playlist-item__text"><span class="playlist-item__views">123k views</span><span class="playlist-item__author">Dollie Blair</span></p>
+				</div>
+			</div>									
 		</div>
-
 	</section>
 	<footer></footer>
 	<script src="build/js/script.js"></script>
