--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
 			<div class="videoplayer-main__image videoplayer-img">
 				<img class="videoplayer-img_item" src="src/images/player.png">
 			</div>
+			<div class="videoplayer-info">
+				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
+				<div class="videoplayer-navigation">
+					<span class="videoplayer-navigation__text">123K views</span>
+					<div class="videoplayer-navigation__wrapper">
+						<div class="videoplayer-navigation__buttons videoplayer-buttons">
+							<a class="videoplayer-buttons__item video-button" href="">
+								<img class="video-button__icon" src="src/images/thumb-up.png">
+								<span class="video-button__text">123k</span>
+							</a>
+							<a class="videoplayer-buttons__item video-button" href="">
+								<img class="video-button__icon" src="src/images/thumb-down.png">
+								<span class="video-button__text">435k</span>
+							</a>
+							<a class="videoplayer-buttons__item video-button" href="">
+								<img class="video-button__icon" src="src/images/share.png">
+								<span class="video-button__text">Share</span>
+							</a>												
+						</div>
+						<a class="videoplayer-more" href="">
+							<img src="src/images/more.png">
+						</a>						
+					</div>
+				</div>
+			</div>
+			<div class="videoplayer-summary">
+				<div class="videoplayer-description">
+					<div class="videoplayer-description__thumbnail">
+						<img class="videoplayer-description__image" src="src/images/videoplayer-img.png">
+					</div>
+					<div class="videoplayer-description__text">
+						<h5 class="videoplayer-description__category">Food & Drink</h5>
+						<span class="videoplayer-description__date">Published on 14 Jun 2019</span>						
+						<p class="videoplayer-description__summary">A successful marketing plan relies heavily on the pulling-power of advertising copy. Writing result-oriented ad copy is difficult, as it must appeal to, entice, and convince consumers to take action. There is no magic formula to write perfect ad copy; it is based on a number of factors, including ad placement, demographic, even the consumer’s mood when they see your ad.</p>
+						<span class="videoplayer-description__more">Show more</span>
+					</div>
+				</div>
+				<a class="videoplayer-button" href="">Subscribe 2.3m</a>				
+			</div>
 		</div>
 		<div class="videoplayer__playlist videoplayer-playlist">
 			<div class="videoplayer-playlist__header playlist-header">
@@ -58,6 +97,7 @@
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
 					<img class="playlist-image__item" src="src/images/video/playlist-1.png">
+					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
 					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
@@ -67,6 +107,7 @@
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
 					<img class="playlist-image__item" src="src/images/video/playlist-2.png">
+					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
 					<h4 class="playlist-item__title">A Good Autoresponder</h4>
@@ -76,6 +117,7 @@
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
 					<img class="playlist-image__item" src="src/images/video/playlist-3.png">
+					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
 					<h4 class="playlist-item__title">Selecting The Right Hotel</h4>
@@ -85,6 +127,7 @@
 			<div class="videoplayer-playlist__item playlist-item">
 				<div class="playlist-item__image playlist-image">
 					<img class="playlist-image__item" src="src/images/video/playlist-4.png">
+					<span class="playlist-item__duration">8.00</span>
 				</div>
 				<div class="playlist-item__description">
 					<h4 class="playlist-item__title">Baby Monitor Technology</h4>
