Implemented responsive design

--- a/home.html
+++ b/home.html
@@ -120,67 +120,10 @@
 			</div>
 		</div>
 		<div class="content">
-			<div class="content-top">
-				<img class="content-top__image" src="src/images/channel-bg.png">
-			</div>
-			<div class="content__header content-header">
-				<div class="content-header__info content-info">
-					<div class="content-info__userpic info-userpic">
-						<img class="info-userpic__image" src="src/images/profile.png">
-					</div>
-					<div class="content-info__description info-description">
-						<h6 class="info-description__title">Margaret Phelps</h6>
-						<p class="info-description__text">245K subscribed</p>
-					</div>
-				</div>
-				<div class="content-header__subscribe content-subscribe">
-					<img class="content-subscribe__icon" src="src/images/bell.png">
-					<a class="button-regular">Subscribe 2.3m</a>
-				</div>
-			</div>
-			<div class="content-main">
-				<div class="content-main__wrapper content-wrapper">
-					<ul class="content-navigation">
-						<li class="content-navigation__item nav-item nav-item_active"><a class="nav-item__link" href="home.html">Home</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="video.html">Videos</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Playlists</a></li>
-						<li class="content-navigation__item nav-item nav-item_more"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/rightArrow.png"></a></li>						
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Channels</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">Discussion</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href="">About</a></li>
-						<li class="content-navigation__item nav-item"><a class="nav-item__link" href=""><img class="nav-item__icon" src="src/images/search.png"></a></li>
-					</ul>
-					<div class="content-player player">
-						<div class="content-player__image player-image">
-							<img class="player-image__pic" src="src/images/channel-video.png">
-							<span class="player-image__time"></span>
-						</div>
-						<div class="content-player__description player-description">
-							<h6 class="player-description__title player-title">Choosing The Best Audio Player Software For Your Computer</h6>
-							<p class="player-description__text player-text">Your cheap internet-based banner advertising will become one of the sought for ads there are. Today, the world of Internet advertising is rapidly evolving beyond banner ads and intrusive pop-ups. Bayles A common medium for advertising on the Internet is the use of banner ads.</p>
-							<p class="player-description__info player-info">11k views 6 month ago</p>
-						</div>
-					</div>					
-				</div>
-				<div class="content-main__recommended recommended">
-					<h6 class="recommended__title">Recommended channels</h6>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-1.png">
-						<p class="recommended-item__name">Flora Benson</p>
-					</div>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-2.png">
-						<p class="recommended-item__name">Violet Cobb</p>
-					</div>
-					<div class="recommended__item recommended-item">
-						<img class="recommended-item__image" src="src/images/recommended/medium-3.png">
-						<p class="recommended-item__name">Philip Mulins</p>
-					</div>										
-				</div>
-			</div>
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
+						<img class="gallery-header__image" src="src/images/header-profile.png">
 						<h4 class="gallery-header__title">Dollie Blair</h4>					
 					</div>
 					<div class="gallery-header_right">
@@ -193,7 +136,168 @@
 				<div class="gallery-small__wrapper">				
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-1.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-1.png">
+							<span class="gallery-small__duration">7:36</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">A Brief History Of Creation</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">34K views</span>
+								<span class="small-item__date">5 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-2.png">
+							<span class="gallery-small__duration">2:19</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Selecting The Right Hotel</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">13k views</span>
+								<span class="small-item__date">15 days ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>					
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-3.png">
+							<span class="gallery-small__duration">9:05</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Asteroids</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">1k views</span>
+								<span class="small-item__date">11 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-4.png">
+							<span class="gallery-small__duration">7:32</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Telescope 101</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">45k views</span>
+								<span class="small-item__date">2 months ago</span>
+								<span class="small-item__date">Food and drink</span>
+							</div>
+						</div>						
+					</div>								
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-5.png">
+							<span class="gallery-small__duration">7:32</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Medical Care Is Just</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">86k views</span>
+								<span class="small-item__date">7 days ago </span>
+								<span class="small-item__date">Food & Drink</span>
+							</div>
+						</div>						
+					</div>
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-6.png">
+							<span class="gallery-small__duration">7:32</span>
+						</div>
+						<div class="gallery-small__description">
+							<h6 class="small-item__title">Moon Gazing</h6>
+							<div class="small-item__text">
+								<span class="small-item__views">86k views</span>
+								<span class="small-item__date">7 days ago </span>
+								<span class="small-item__date">Food & Drink</span>
+							</div>
+						</div>						
+					</div>					
+				</div>																			
+			</div>				
+			<div class="gallery-medium">
+				<div class="gallery-header">
+					<h4 class="gallery-header__title">Recommended</h4>
+					<div class="gallery-navigation">
+						<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
+						<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+					</div>
+				</div>
+				<div class="gallery-medium__wrapper">
+					<div class="gallery-medium__item medium-item">
+						<div class="gallery-medium__thumbnail">
+							<img class="gallery-medium__image" src="src/images/medium-1.png">
+							<span class="gallery-medium__duration">3.40</span>
+						</div>
+						<div class="gallery-medium__description">
+							<h6 class="medium-item__title">Dude You Re Getting A Telescope</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">34K views</span>
+									<span class="medium-item__date">5 months ago</span>									
+								</p>
+								<span class="medium-item__name">Gussie French</span>
+							</div>
+						</div>
+					</div>
+					<div class="gallery-medium__item medium-item">
+						<div class="gallery-medium__thumbnail">
+							<img class="gallery-medium__image" src="src/images/medium-2.png">
+							<span class="gallery-medium__duration">2.40</span>
+						</div>
+						<div class="gallery-medium__description">
+							<h6 class="medium-item__title">Moon Gazing</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">54K views</span>
+									<span class="medium-item__date">11 months ago</span>									
+								</p>
+								<span class="medium-item__name">Edward Osbourne</span>
+							</div>
+						</div>
+					</div>
+					<div class="gallery-medium__item medium-item">
+						<div class="gallery-medium__thumbnail">
+							<img class="gallery-medium__image" src="src/images/medium-3.png">
+							<span class="gallery-medium__duration">2.12</span>
+						</div>
+						<div class="gallery-medium__description">
+							<h6 class="medium-item__title">Moon Gazing</h6>
+							<div class="medium-item__text">
+								<p class="medium-text__wrapper">
+									<span class="medium-item__views">125K views</span>
+									<span class="medium-item__date">4 month ago</span>									
+								</p>
+								<span class="medium-item__name">Dollie </span>
+							</div>
+						</div>
+					</div>										
+				</div>
+			</div>
+			<div class="gallery-small">
+				<div class="gallery-header">
+					<div class="gallery-header_left">
+						<img class="gallery-header__image" src="src/images/videoplayer-img.png">
+						<h4 class="gallery-header__title">Food and drink</h4>
+						<p class="gallery-header__text">Recommended channel for you</p>						
+					</div>
+					<div class="gallery-header_right">
+						<a class="button-regular">Subscribe 2.3m</a>
+						<div class="gallery-navigation">
+							<a class="gallery-navigation__item" href=""><img src="src/images/left.png"></a>
+							<a class="gallery-navigation__item" href=""><img src="src/images/right.png"></a>
+						</div>						
+					</div>
+				</div>
+				<div class="gallery-small__wrapper">				
+					<div class="gallery-small__item small-item">
+						<div class="gallery-small__thumbnail">
+							<img class="gallery-small__image" src="src/images/slider/slider-12.png">
 							<span class="gallery-small__duration">7:36</span>
 						</div>
 						<div class="gallery-small__description">
@@ -207,11 +311,11 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-2.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-11.png">
 							<span class="gallery-small__duration">2:19</span>
 						</div>
 						<div class="gallery-small__description">
-							<h6 class="small-item__title">Advertising Outdoors</h6>
+							<h6 class="small-item__title">Advertising outdoors</h6>
 							<div class="small-item__text">
 								<span class="small-item__views">13k views</span>
 								<span class="small-item__date">15 days ago</span>
@@ -221,11 +325,11 @@
 					</div>					
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-3.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-10.png">
 							<span class="gallery-small__duration">9:05</span>
 						</div>
 						<div class="gallery-small__description">
-							<h6 class="small-item__title">Radio Astronomy</h6>
+							<h6 class="small-item__title">Radio astronomy</h6>
 							<div class="small-item__text">
 								<span class="small-item__views">1k views</span>
 								<span class="small-item__date">11 months ago</span>
@@ -235,11 +339,11 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-4.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-9.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
-							<h6 class="small-item__title">A Good Autoresponder</h6>
+							<h6 class="small-item__title">A good autoresponder</h6>
 							<div class="small-item__text">
 								<span class="small-item__views">45k views</span>
 								<span class="small-item__date">2 months ago</span>
@@ -249,7 +353,7 @@
 					</div>								
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-5.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-8.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -263,7 +367,7 @@
 					</div>
 					<div class="gallery-small__item small-item">
 						<div class="gallery-small__thumbnail">
-							<img class="gallery-small__image" src="src/images/channel/channel-6.png">
+							<img class="gallery-small__image" src="src/images/slider/slider-7.png">
 							<span class="gallery-small__duration">7:32</span>
 						</div>
 						<div class="gallery-small__description">
@@ -275,10 +379,9 @@
 							</div>
 						</div>						
 					</div>					
-				</div>																				
+				</div>																			
 			</div>
 		</div>
-
 	</section>
 	<footer></footer>
 	<script src="build/js/script.js"></script>
