--- a/video.html
+++ b/video.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="build/css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600&display=swap" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">	
 </head>
 <body>
 	<header class="header">
@@ -41,7 +41,7 @@
 	<section class="videoplayer">
 		<div class="videoplayer__main videoplayer-main">
 			<div class="videoplayer-main__image videoplayer-img">
-				<img class="videoplayer-img_item" src="src/images/player.png">
+				<img class="videoplayer-img__item" src="src/images/player.png">
 			</div>
 			<div class="videoplayer-info">
 				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
@@ -75,12 +75,13 @@
 					</div>
 					<div class="videoplayer-description__text">
 						<h5 class="videoplayer-description__category">Food & Drink</h5>
-						<span class="videoplayer-description__date">Published on 14 Jun 2019</span>						
+						<span class="videoplayer-description__date">Published on 14 Jun 2019</span>
+						<span class="videoplayer-description__views">123K views</span>						
 						<p class="videoplayer-description__summary">A successful marketing plan relies heavily on the pulling-power of advertising copy. Writing result-oriented ad copy is difficult, as it must appeal to, entice, and convince consumers to take action. There is no magic formula to write perfect ad copy; it is based on a number of factors, including ad placement, demographic, even the consumer’s mood when they see your ad.</p>
 						<span class="videoplayer-description__more">Show more</span>
 					</div>
 				</div>
-				<a class="videoplayer-button" href="">Subscribe 2.3m</a>				
+				<a class="videoplayer-button" href="">Subscribe <span class="videoplayer-button__count">2.3m</span></a>				
 			</div>
 		</div>
 		<div class="videoplayer__playlist videoplayer-playlist">
