--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">	
 </head>
 <body>
-	<header class="header">
+	<header class="header header-home">
 		<div class="menu">
 			<img src="src/images/burger.png">
 		</div>
@@ -31,11 +31,19 @@
 				<img src="src/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
+				<span class="top-navigation__alert">3</span>
 				<img src="src/images/bell.png">
 			</div>
 		</div>
-		<div class="top-userpic">
-			<img src="src/images/Userpic.png">
+		<div class="header_right">
+			<div class="mobile-nav">
+				<div class="mobile-nav__item">
+					<img src="src/images/search-mobile.png">
+				</div>
+			</div>				
+			<div class="top-userpic">
+				<img src="src/images/Userpic.png">			
+			</div>
 		</div>
 	</header>
 	<section class="main">
@@ -88,6 +96,7 @@
 					</div>																		
 				</div>
 				<div class="sidebar__subscriptions subscriptions">
+					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
 						<img class="subscriptions-item__image" src="src/images/small-1.png">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
@@ -119,7 +128,7 @@
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
-		<div class="content">
+		<div class="content content_full">
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
@@ -282,8 +291,8 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<img class="gallery-header__image" src="src/images/videoplayer-img.png">
-						<h4 class="gallery-header__title">Food and drink</h4>
+						<img class="gallery-header__image gallery-img_small" src="src/images/videoplayer-img.png">
+						<h4 class="gallery-header__title">Food & drink</h4>
 						<p class="gallery-header__text">Recommended channel for you</p>						
 					</div>
 					<div class="gallery-header_right">
