--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">	
 </head>
 <body>
-	<header class="header">
+	<header class="header header-channel">
 		<div class="menu">
 			<img src="src/images/burger.png">
 		</div>
 		<div class="logo">
 			<img class="logo-button" src="src/images/ybutton.png">
 			<img class="logo-youtube" src="src/images/Youtube.png">
+			<span class="mobile-title">Margaret Phelps</span>	
+		</div>	
+		<div class="mobile-nav">
+			<div class="mobile-nav__item">
+				<img src="src/images/search-mobile.png">
+			</div>
+			<div class="mobile-nav__item">
+				<img src="src/images/menu-mobile.png">
+			</div>
 		</div>
 		<div class="search">
 			<input class="search-input" type="text" name="" placeholder="Search">
@@ -31,6 +40,7 @@
 				<img src="src/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
+				<span class="top-navigation__alert">3</span>
 				<img src="src/images/bell.png">
 			</div>
 		</div>
@@ -88,6 +98,7 @@
 					</div>																		
 				</div>
 				<div class="sidebar__subscriptions subscriptions">
+					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
 						<img class="subscriptions-item__image" src="src/images/small-1.png">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
@@ -119,7 +130,7 @@
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
-		<div class="content">
+		<div class="content content_full">
 			<div class="content-top">
 				<img class="content-top__image" src="src/images/channel-bg.png">
 			</div>
@@ -181,7 +192,7 @@
 			<div class="gallery-small">
 				<div class="gallery-header">
 					<div class="gallery-header_left">
-						<h4 class="gallery-header__title">Dollie Blair</h4>					
+						<h4 class="gallery-header__title">Margaret Phelps videos</h4>					
 					</div>
 					<div class="gallery-header_right">
 						<div class="gallery-navigation">
