--- a/video.html
+++ b/video.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap" rel="stylesheet">	
 </head>
 <body>
-	<header class="header">
+	<header class="header header-video">
 		<div class="menu">
 			<img src="src/images/burger.png">
 		</div>
@@ -23,6 +23,14 @@
 			<input class="search-input" type="text" name="" placeholder="Search">
 			<img class="search-icon" src="src/images/search.png">
 		</div>
+		<div class="mobile-nav">
+			<div class="mobile-nav__item">
+				<img src="src/images/search-mobile.png">
+			</div>
+			<div class="mobile-nav__item">
+				<img src="src/images/menu-mobile.png">
+			</div>
+		</div>		
 		<div class="top-navigation">
 			<div class="top-navigation__item">
 				<img src="src/images/camera.png">
@@ -31,6 +39,7 @@
 				<img src="src/images/dots.png">
 			</div>
 			<div class="top-navigation__item">
+				<span class="top-navigation__alert">3</span>
 				<img src="src/images/bell.png">
 			</div>
 		</div>
