Fixed videoplayer page, implemented progress bar and controls

--- a/video.html
+++ b/video.html
@@ -51,6 +51,58 @@
 		<div class="videoplayer__main videoplayer-main">
 			<div class="videoplayer-main__image videoplayer-img">
 				<img class="videoplayer-img__item" src="src/images/player.png">
+				<div class="videoplayer__navigation videoplayer-navigation">
+					<div class="videoplayer-navigation__time videoplayer-time">
+						<span class="videoplayer-time__item"> 
+							1.34
+						</span>
+						<span class="videoplayer-time__item">
+							19.00
+						</span>
+					</div>
+					<div class="videoplayer-navigation__progress videoplayer-progress">
+						<div class="videoplayer-progress_left">
+							<div class="videoplayer-progress__control">
+								<img src="src/images/player/Pause small.png">
+							</div>
+							<span class="videoplayer-progress__time">1.34</span>
+						</div>
+						<img src="src/images/player/Progress Bar.png" class="videoplayer-progress__image">
+						<div class="videoplayer-progress_right">
+							<span class="videoplayer-progress__time">19.00</span>
+							<div class="videoplayer-progress__control">
+								<img src="src/images/player/Volume small.png">
+							</div>
+						</div>
+					</div>
+					<div class="videoplayer-navigation__controls videoplayer-controls">
+						<div class="videoplayer-controls_left">
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Pause.png">
+							</div>
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Next.png">
+							</div>
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Volume.png">
+							</div>										
+						</div>
+						<div class="videoplayer-controls_right">
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Subtitles.png">
+							</div>
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Settings.png">
+							</div>
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Size.png">
+							</div>
+							<div class="videoplayer-controls__item">
+								<img src="src/images/player/Full Screen.png">
+							</div>															
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="videoplayer-info">
 				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
