implemented minor fixes for moblie devices

--- a/home.html
+++ b/home.html
@@ -51,80 +51,80 @@
 			<div class="sidebar__wrapper">
 				<div class="sidebar__categories categories">
 					<div class="categories__item categories-item categories-item_active">
-						<img class="categories-item__image" src="src/images/home.png">
+						<img class="categories-item__image" src="src/images/sidebar/home.png">
 						<p class="categories-item__text">Home</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/trending.png">
+						<img class="categories-item__image" src="src/images/sidebar/trending.png">
 						<p class="categories-item__text">Trending</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/subscriptions.png">
+						<img class="categories-item__image" src="src/images/sidebar/subscriptions.png">
 						<p class="categories-item__text">Subscriptions</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/library.png">
+						<img class="categories-item__image" src="src/images/sidebar/library.png">
 						<p class="categories-item__text">Library</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/history.png">
+						<img class="categories-item__image" src="src/images/sidebar/history.png">
 						<p class="categories-item__text">History</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/watchlater.png">
+						<img class="categories-item__image" src="src/images/sidebar/watchlater.png">
 						<p class="categories-item__text">Watch later</p>
 					</div>				
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/favourite.png">
+						<img class="categories-item__image" src="src/images/sidebar/favourite.png">
 						<p class="categories-item__text">Favourites</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/liked.png">
+						<img class="categories-item__image" src="src/images/sidebar/liked.png">
 						<p class="categories-item__text">Liked videos</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/music.png">
+						<img class="categories-item__image" src="src/images/sidebar/music.png">
 						<p class="categories-item__text">Music</p>
 					</div>
 					<div class="categories__item categories-item">
-						<img class="categories-item__image" src="src/images/games.png">
+						<img class="categories-item__image" src="src/images/sidebar/games.png">
 						<p class="categories-item__text">Games</p>
 					</div>
 					<div class="categories__item categories-item categories-item_spaced">
-						<img class="categories-item__image" src="src/images/chevron-down.png">
+						<img class="categories-item__image" src="src/images/sidebar/chevron-down.png">
 						<p class="categories-item__text">Show more</p>
 					</div>																		
 				</div>
 				<div class="sidebar__subscriptions subscriptions">
 					<h5 class="subscriptions-header">Subscriptions</h5>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-1.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-1.png">
 						<p class="subscriptions-item__text">Gussie Singleton</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-2.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-2.png">
 						<p class="subscriptions-item__text">Nora Francis</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-3.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-3.png">
 						<p class="subscriptions-item__text">Belle Briggs</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-4.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-4.png">
 						<p class="subscriptions-item__text">Eunice Cortez</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-5.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-5.png">
 						<p class="subscriptions-item__text">Emma Hanson</p>
 					</div>
 					<div class="subscriptions__item subscriptions-item">
-						<img class="subscriptions-item__image" src="src/images/small-6.png">
+						<img class="subscriptions-item__image" src="src/images/sidebar/small-6.png">
 						<p class="subscriptions-item__text">Leah Berry</p>
 					</div>																
 				</div>									
 			</div>
 			<div class="sidebar__settings sidebar-settings">
-				<img class="sidebar-settings__image" src="src/images/settings.png">
+				<img class="sidebar-settings__image" src="src/images/sidebar/settings.png">
 				<p class="sidebar-settings__text">Settings</p>				
 			</div>
 		</div>
