--- a/video.html
+++ b/video.html
@@ -105,6 +105,9 @@
 				</div>
 			</div>
 			<div class="videoplayer-info">
+				<div class="videoplayer-info__more">
+					<img src="src/images/RightArrow.png">
+				</div>
 				<h1 class="videoplayer-title">Dude You Re Getting A Telescope</h1>
 				<div class="videoplayer-navigation">
 					<span class="videoplayer-navigation__text">123K views</span>
